--- a/index.html
+++ b/index.html
@@ -1,58 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A simple and beautiful weather app.">
-    <title>Weather App</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Weather App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="container">
-        <header>
-            <h1>Weather App</h1>
-        </header>
-
-        <div class="search-box">
-            <input type="text" id="city-input" placeholder="Enter city name..." autocomplete="off">
-            <button id="search-btn" aria-label="Search">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-            </button>
-        </div>
-
-        <div class="error-msg hidden" id="error-msg"></div>
-
-        <div class="weather-info hidden" id="weather-info">
-            <h2 id="city-name">--</h2>
-            <p id="date">--</p>
-            
-            <div class="weather-main">
-                <div class="temp-container">
-                    <span id="temperature">--</span><span class="unit">°C</span>
-                </div>
-                <div class="condition-container">
-                    <p id="condition">--</p>
-                </div>
-            </div>
-
-            <div class="details">
-                <div class="detail-card">
-                    <span class="label">Humidity</span>
-                    <span class="value" id="humidity">--%</span>
-                </div>
-                <div class="detail-card">
-                    <span class="label">Wind Speed</span>
-                    <span class="value" id="wind-speed">-- km/h</span>
-                </div>
-            </div>
-        </div>
-        
-        <div class="loader hidden" id="loader"></div>
-    </div>
-
-    <script src="script.js"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
+
 </html>
